Closed Bug 404499 Opened 18 years ago Closed 18 years ago

js1_5/Regress/regress-168347.js FAIL - browser|shell

Categories

(Core :: JavaScript Engine, defect)

x86
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: bc, Assigned: igor)

References

()

Details

(Keywords: dogfood, regression, testcase)

Attachments

(1 file)

BUGNUMBER: 168347 STATUS: Testing F.toString() FAILED! expected: [reported from test()] Expected value 'functionF(){varf=arguments.callee;f.i=0;try{f.i=f.i+1;print("i=i+1succeededi="+f.i);}catch(e){print(', Actual value 'functionF(){varf=arguments.callee;f.i=0;try{f.i=f.f+1;print("i=i+1succeededi="+f.f);}catch(e){print(' FAILED! expected: [reported from test()] Expected value '"i=i+1failedwith"+e+"i="+f.i);}try{++f.i;print("++isucceededi="+f.i);}catch(e){print("++ifailedwith"', Actual value '"i=i+1failedwith"+e+"i="+f.f);}try{++f.i;print("++isucceededi="+f.f);}catch(e){print("++ifailedwith"' FAILED! expected: [reported from test()] Expected value '+e+"i="+f.i);}try{f.i++;print("i++succeededi="+f.i);}catch(e){print("i++failedwith"+e+"i="+f.i);}try', Actual value '+e+"i="+f.f);}try{f.i++;print("i++succeededi="+f.f);}catch(e){print("i++failedwith"+e+"i="+f.f);}try' FAILED! expected: [reported from test()] Expected value '{--f.i;print("--isucceededi="+f.i);}catch(e){print("--ifailedwith"+e+"i="+f.i);}try{f.i--;print("i--', Actual value '{--f.i;print("--isucceededi="+f.f);}catch(e){print("--ifailedwith"+e+"i="+f.f);}try{f.i--;print("i--' FAILED! expected: [reported from test()] Expected value 'succeededi="+f.i);}catch(e){print("i--failedwith"+e+"i="+f.i);}}', Actual value 'succeededi="+f.f);}catch(e){print("i--failedwith"+e+"i="+f.f);}}' PASSED! Section 6 of test - PASSED! Section 7 of test - PASSED! Section 8 of test - PASSED! Section 9 of test - regressed in the last day, maybe the hidden properties bug 398609. I'll try to get a better range after I take care of some other stuff.
Flags: in-testsuite+
Flags: in-litmus-
I think js1_8/decompilation/regress-381504.js is the same issue: Expected value ' function _4 ( ) { var bar ; return foo [ bar . baz ] ; } ', Actual value ' function _4 ( ) { var bar ; return foo [ bar . bar ] ; } '
I have not seen the regression because the driver does not report the failures even if the output comes with errors: ~/m/trunk/mozilla/js/tests $ ./jsDriver.pl -e smdebug -l js1_5/Regress/regress-168347.js -K -#- Executing 1 test(s). -#- Wrote results to 'results-2007-11-20-161256-smdebug.html'. -#- 0 test(s) failed For regression testing I typically run the test suite twice, before and after the patch, using: ./jsDriver.pl -e smdebug -L slow-n.tests performance.tests and then diff the list of failures. Since the failures where not reported as such, I was not aware about them.
Blocks: 398609
Attached patch fix v1Splinter Review
The bug was in BEGIN_LITOPX_CASE(JSOP_GETARGPROP, ARGNO_LEN) case in the decompiler. There I assigned the atom overwriting the value loaded by the macro. To prevent such bugs in future I replaced all BEGIN_LITOPX_CASE with explicit case: LOAD_ATOM(); sequences.
Assignee: general → igor
Status: NEW → ASSIGNED
Attachment #289496 - Flags: review?(brendan)
(In reply to comment #2) > > and then diff the list of failures. Since the failures where not reported as > such, I was not aware about them. I'll file a bug and fix that. Use -R for now since that will show the failures more reliably I think.
Keywords: dogfood
Ping for a review: I think this regression busted few extensions.
Blocks: 404480
Flags: blocking1.9?
The patch solved the problems with my extensions (see bug 398609 comment 47)
(In reply to comment #6) > The patch solved the problems with my extensions (see bug 398609 comment 47) > Thats good news. Hope this one lands soon so I can test the other extensions as well.
Attachment #289496 - Flags: review?(brendan) → review+
I checked in the patch from comment 3 to the CVS trunk: Checking in js/src/jsopcode.c; /cvsroot/mozilla/js/src/jsopcode.c,v <-- jsopcode.c new revision: 3.272; previous revision: 3.271 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
verified fixed.
Status: RESOLVED → VERIFIED
Flags: blocking1.9?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: