Bug 404499: fixing the regression in the decompiler from landing of bug	398609. r,a=brendan